--- a/cdk/package.json
+++ b/cdk/package.json
@@ -5,13 +5,19 @@
     "cdk": "bin/cdk.js"
   },
   "scripts": {
-    "build": "echo \"The build step is not required when using JavaScript!\" && exit 0",
-    "cdk": "cdk",
-    "test": "jest"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "22.7.9",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "aws-cdk": "2.173.3",
-    "jest": "^29.7.0"
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.3"
   },
   "dependencies": {
     "aws-cdk-lib": "2.173.3",
